--- a/src/site/search-index.njk
+++ b/src/site/search-index.njk
@@ -4,6 +4,17 @@ eleventyExcludeFromCollections: true
 ---
 [
 {%- for post in collections.note -%}
+  {%- set allTags = [] -%}
+  {#- 1. 收集 Frontmatter 标签 -#}
+  {%- if post.data.tags -%}
+    {%- for tag in post.data.tags -%}
+      {%- set allTags = (allTags.push(tag), allTags) -%}
+    {%- endfor -%}
+  {%- endif -%}
+  {#- 2. 收集正文提取的标签 (如果有) -#}
+  {%- set contentTagsRaw = post.templateContent | link | searchableTags -%}
+  {#- 注意：这里处理插件可能返回的特殊格式 -#}
+
 {
     "title": {% if post.data.title %}{{ post.data.title | jsonify | safe }}{% else %}{{ post.fileSlug | jsonify | safe }}{% endif %},
     "date": "{{ post.date }}",
@@ -12,19 +23,9 @@ eleventyExcludeFromCollections: true
     "cover": {% if post.data.cover %}{{ post.data.cover | jsonify | safe }}{% else %}""{% endif %},
     "content": {{ post.templateContent | striptags(true) | link | jsonify | safe }},
     "tags": [
-        {#- 第一部分：从正文提取的标签 -#}
-        {{ post.templateContent | link | searchableTags | safe }}
-        
-        {#- 连接符：如果两边都有标签，才加逗号 -#}
-        {%- set contentTags = post.templateContent | link | searchableTags -%}
-        {%- if contentTags and post.data.tags -%},{%- endif -%}
-
-        {#- 第二部分：Frontmatter 定义的标签 -#}
-        {%- if post.data.tags -%}
-            {%- for tag in post.data.tags -%}
-                "{{ tag | replace('"', '\\"') }}"{%- if not loop.last -%},{%- endif -%}
-            {%- endfor -%}
-        {%- endif -%}
+        {%- for tag in allTags -%}
+            "{{ tag | replace('"', '\\"') }}"{%- if not loop.last -%},{%- endif -%}
+        {%- endfor -%}
     ]
 }{% if not loop.last %},{% endif %}
 {%- endfor -%}
