--- a/src/site/search-index.njk
+++ b/src/site/search-index.njk
@@ -14,10 +14,10 @@ eleventyExcludeFromCollections: true
         "url": "{{ post.url }}",
         "author": {{ (post.data.author or "CGfan") | jsonify | safe }},
         "cover": {{ (post.data.cover or "") | jsonify | safe }},
-        "content": {{ post.templateContent | striptags | jsonify | safe }},
+        {#- 关键修改：不再使用 striptags，改为用 replace 正则精准删除脏数据 -#}
+        "content": {{ post.templateContent | replace("[object Object]", "") | jsonify | safe }},
         "tags": [
             {%- if post.data.tags -%}
-                {#- 这里的 loop 是 Nunjucks 遍历 tags 的标准写法，会自动处理单条或多条数据 -#}
                 {%- for tag in post.data.tags -%}
                     {{ tag | replace('#', '') | jsonify | safe }}{%- if not loop.last -%},{%- endif -%}
                 {%- endfor -%}
