--- a/src/site/search-index.njk
+++ b/src/site/search-index.njk
@@ -14,8 +14,8 @@ eleventyExcludeFromCollections: true
         "url": "{{ post.url }}",
         "author": {{ (post.data.author or "CGfan") | jsonify | safe }},
         "cover": {{ (post.data.cover or "") | jsonify | safe }},
-        {#- 关键修改：不再使用 striptags，改为用 replace 正则精准删除脏数据 -#}
-        "content": {{ post.templateContent | replace("[object Object]", "") | jsonify | safe }},
+        {#- 核心：源头干净了，就不需要 striptags 了，图片自然回来了 -#}
+        "content": {{ post.templateContent | jsonify | safe }},
         "tags": [
             {%- if post.data.tags -%}
                 {%- for tag in post.data.tags -%}
